# ulina_site

./: .gitignore  Cargo.toml  README.MD  README.md  input.css  run.ps1  schema.sql  styles.css  tailwind.config.js  test.html  tsconfig.json  watch.ps1
Assets/Fonts/: Constantia Continent Large.asset  Constantia Continent.asset  Constantia SDF.asset
Assets/Prefabs/: AudioButtonMusic.prefab  AudioButtonSFX.prefab  Back.prefab  Content.prefab  ContentAnimator.prefab  (+3 more)
OldUlinaMap/: .gitignore  README.md  ulina map.sln
ProjectSettings/: ProjectSettings.asset  TagManager.asset
UlinaSiteNode/: .gitignore  package.json  schema.prisma
bot/: bot.ts  modal.ts
client/: manageNation.ts  manageNations.ts  mapCreator.ts  time.ts
common/: Cargo.toml
server/: Cargo.toml  app.ts  backup.ts  tsconfig.json
sessions/: -c7ohmBMkm3ERY6eNhP2hKsnzhfXxFXJ.json  5PSi2yGJyu6mU1bpol5DgcdEg4YUeyO_.json  86ghnrab02kOunvtkiks_2oN-Y3hJvko.json  bGDVwrVWzHO_Cp85gODIApKUVjduMzed.json  dFZONB3PnFHzL7I-d0_SZPit94Bk-_Bt.json  wUZPanKhd4ftubziU11XRJlT_sZ394yN.json
shared/: timeUtil.ts
tools/: Cargo.toml  index.html
ulina_map/: Cargo.toml  index.html
ulina_map/src/: backend.rs  error.rs  event_bus.rs  flag.rs  infobox.rs  loading.rs  main.rs  map.rs  nation.rs  util.rs  viewbox.rs
ulina_map/src/components/: infobox.rs  map.rs  nation.rs
ulina_server/: Cargo.toml  all-nations.txt
ulina_server/public/: styles.css  ulina_map-22a2277e9a204d42.js  ulina_map-22a2277e9a204d42_bg.wasm  ulina_map-a77de4eb9a193305.js  ulina_map-a77de4eb9a193305_bg.wasm
ulina_server/src/: error.rs  main.rs  util.rs
ulina_server/src/database/: mod.rs
ulina_server/src/discord/: helper.rs  ids.rs  mod.rs  modal.rs  run.rs
ulina_server/src/discord/commands/: all_nations.rs  commands.rs  create_nation.rs  edit_flag.rs  edit_name_description.rs  edit_socials.rs  mod.rs  nation.rs  ping.rs  remove_nation.rs  shared.rs
ulina_server/src/site/: mod.rs
ulina_server/static/: map.html
ulina_site/: Cargo.toml  tailwind.ps1
ulina_site/server/: Cargo.toml
ulina_site/server/migrations/: 20220805105830_users.sql  20220818164104_fixnationchange.sql
ulina_site/server/public/: index.html
ulina_site/server/public/join/: index.html
ulina_site/server/src/: config.rs
ulina_site/server/src/database/: models.rs  update.rs
ulina_site/server/src/discord/commands/: all_nations.rs  create_nation.rs  edit_discord_user.rs  edit_name_description.rs  edit_socials.rs  mod.rs  remove_nation.rs  shared.rs
ulina_site/server/src/site/: cors.rs  mod.rs
ulina_site/tools/: Cargo.toml  index.html
ulina_site/tools/src/: main.rs
ulina_site/tools/src/components/: flag.rs  login.rs
ulina_site/tools/src/pages/: changes.rs  mod.rs  nations.rs
ulina_site/tools/src/pages/create_map/: nation.rs
ulina_site/tools/src/pages/map/components/: app.rs  mod.rs
(+263 files in other folders)
