[package]
name = "ulina_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
lazy_static = "1.4.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "macros", "chrono" ] }
once_cell = "1.12.0"
dotenv = "0.15.0"
common = { path = "../common" }
serde = "1.0.137"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "collector"]
version = "0.11"
