[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
lazy_static = "1.4.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "macros", "chrono" ] }
once_cell = "1.12.0"
dotenv = "0.15.0"
envy = "0.4.2"
common = { path = "../common" }
chrono = { version = "0.4"}
serde = "1.0.137"
serde_json = "1.0"
rocket-governor = "0.1.0-rc.4"
sycamore = { version = "0.7.1", features = ["ssr"]}
oauth2 = "4.2.3"
reqwest = "0.11.11"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "collector"]
version = "0.11"
