[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = "1.0.137"
serde_json = "1.0"
common = {path = "../common"}
reqwasm = "0.2"
wasm-bindgen-futures = "0.4"
gloo-utils = "0.1"
gloo-events = "0.1"
gloo = "0.8"
yew-agent = "0.1.0"
glam = "0.21.2"
yew-router = "0.16"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
js-sys = "0.3"
async-trait = "0.1.57"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "Node", "Window", "SvgElement", "HtmlCollection", "DomRect", "Event", "EventTarget", "HtmlFormElement", "DataTransfer", "DragEvent", "File", "FileList", "Blob", "FileReader"]

[build]
target = "wasm32-unknown-unknown"